--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,26 @@ environment:
 dependencies:
   animated_splash_screen: ^1.3.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^5.3.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
+  flutter_bloc: ^8.1.2
   flutter_svg: ^2.0.7
   freezed_annotation: ^2.4.1
+  get_it: ^7.2.0
   google_fonts: ^6.0.0
-  json_annotation: ^4.8.1
-  json_serializable: ^6.7.1
+  injectable: ^2.3.0
+  json_annotation: ^4.8.0
+  json_serializable: ^6.6.1
 
 dev_dependencies:
-  build_runner: ^2.4.6
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.4.2
+  injectable_generator: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
