--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   get_it: ^7.2.0
   google_fonts: ^6.0.0
   injectable: ^2.3.0
+  intl: ^0.18.1
   json_annotation: ^4.8.0
   json_serializable: ^6.6.1
+  number_pagination: ^0.0.3+2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.3.3
