--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   json_annotation: ^4.8.0
   json_serializable: ^6.6.1
   number_pagination: ^0.0.3+2
+  provider: ^6.0.5
   shimmer: ^3.0.0
+  single_option_picker: ^1.0.1+2
 
 dev_dependencies:
   build_runner: ^2.3.3
